fix image layout on mobile.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -184,7 +184,7 @@ header {
     background-size: cover;
   }
   #kudos-headline {
-    background: image-url('kids_dishes_1140x500.jpg') no-repeat center center;
+    background: image-url('kids_dishes_1140x500.jpg') no-repeat 75% center;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
